<resources>
    <string name="app_name">Week 4 Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visa">VISA</string>
    <string name="card_number">card number</string>
    <string name="blue_rectangle">blue_rectangle</string>
    <string name="light_blue_rectangle">blue rectangle</string>
    <string name="daro_text">daro text</string>
    <string name="debit_card_text">debit_card_text</string>
    <string name="dollar_sign">dollar sign</string>
    <string name="money_numerical_value">money numerical value</string>
    <string name="red_rectangle">red rectangle</string>
    <string name="transfer_text">Transfer text</string>
    <string name="tiny_card_icon_1">tiny_card_icon_1</string>
    <string name="tiny_card_icon_2">tiny_card_icon_2</string>
    <string name="bar_code_text">bar_code_text</string>
    <string name="bar_code_icon">bar_code_icon</string>
    <string name="house_icon_text">house_icon_text</string>
    <string name="house_icon">house_icon</string>
    <string name="dollar_frame_dollar">dollar_frame_dollar</string>
    <string name="dollar_frame">dollar_frame</string>
    <string name="sika_less">sika less</string>
    <string name="dollar">dollar</string>
    <string name="cash_loan">cash loan</string>
    <string name="display_card">display card</string>
    <string name="special_offers">special offers</string>
    <string name="credit_card">credit card</string>
    <string name="credit_card_frame">credit_card_frame</string>
    <string name="credit_card_icon">credit_card_icon</string>
    <string name="partners">partners</string>
    <string name="aliexpress">aliexpress</string>
    <string name="discount">discount</string>
    <string name="tag_clothes_shoes">clothes and shoes</string>
    <string name="shopping_bag_icon">shopping_bags</string>
    <string name="aviasales">aviasales</string>
    <string name="tickets_travel">tickets and travels</string>
    <string name="product">Product</string>
    <string name="payments">Payments</string>
    <string name="history">History</string>
    <string name="support">Support</string>
    <string name="more">More</string>
    <string name="welcome_to_more_fragment">Welcome to More Fragment</string>
    <string name="welcome_to_payments_fragment">Welcome to Payments Fragment</string>
    <string name="welcome_to_support_fragment">Welcome to Support Fragment</string>
    <string name="welcome_to_history_fragment">Welcome to History Fragment</string>
    <string name="darot">Darot</string>
    <string name="debit_card">Debit card</string>
    <string name="moneyValue">23,481,000.00</string>
    <string name="_4321">4321</string>
</resources>