<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/group_10"
        android:title="@string/product" />
    <item
        android:id="@+id/navigation_payments"
        android:icon="@drawable/wallet_1"
        android:title="@string/payments" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/clock__2__1"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_support"
        android:icon="@drawable/heart"
        android:title="@string/support" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/group_9"
        android:title="@string/more" />
</menu>
