<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:layout_height="90dp"
    tools:context=".Image1Fragment">

    <ImageView
        android:id="@+id/blue_rectangle"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/rectangle_23"
        android:contentDescription="@string/light_blue_rectangle" />

    <ImageView
        android:id="@+id/daro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/darot"
        android:contentDescription="@string/daro_text" />

    <ImageView
        android:id="@+id/debit_card_text"
        android:layout_width="40dp"
        android:layout_height="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="110dp"
        android:src="@drawable/debit_card"
        android:contentDescription="@string/debit_card_text"/>

    <ImageView
        android:id="@+id/dollar_sign"
        android:layout_width="9dp"
        android:layout_height="17dp"
        android:layout_marginTop="58dp"
        android:layout_marginStart="118dp"
        android:src="@drawable/dollar_sign"
        android:contentDescription="@string/dollar_sign" />

</FrameLayout>

