<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/partner_1"
        android:layout_width="130dp"
        android:layout_height="105dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <ImageView
                android:id="@+id/brand_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="23dp"
                android:contentDescription="@string/aliexpress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
<!--                app:srcCompat="@drawable/aliexpress"-->


            <ImageView
                android:id="@+id/discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/discount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand_name"/>
<!--                app:srcCompat="@drawable/discount" -->

            <ImageView
                android:id="@+id/brand_niche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="17dp"
                android:contentDescription="@string/tag_clothes_shoes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discount"/>
<!--                app:srcCompat="@drawable/clothes_and_shoes" -->

            <ImageView
                android:id="@+id/shopping_bag_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="14dp"
                android:contentDescription="@string/shopping_bag_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
<!--                app:srcCompat="@drawable/shopping_bag_1" -->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
