<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".navFragment.Product"
    android:id="@+id/productsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_layout"
            android:layout_width="match_parent"
            android:layout_height="74dp">


            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toStartOf="@id/card_layout"
                app:layout_constraintTop_toTopOf="@id/card_layout"
                app:srcCompat="@drawable/rectangle_20"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <ImageView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="34dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toEndOf="@id/profile_img"
                app:layout_constraintTop_toTopOf="@id/card_layout"

                app:srcCompat="@drawable/ola_machiavelli"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36.5dp"
                android:layout_marginEnd="22.5dp"
                android:layout_marginBottom="28.67dp"
                app:layout_constraintEnd_toEndOf="@id/card_layout"
                app:layout_constraintTop_toTopOf="@id/card_layout"
                app:srcCompat="@drawable/notification"
                tools:layout_editor_absoluteX="294dp"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewPager_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/myViewPager"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="128dp"
        android:layout_marginLeft="@dimen/pageMarginAndoffset"
        android:layout_marginRight="@dimen/pageMarginAndoffset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewPager_layout"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/tiny_card1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myViewPager">

        <ImageView
            android:id="@+id/tiny_card_icon_1"
            android:layout_width="22dp"
            android:layout_height="17.11dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="19dp"
            android:contentDescription="@string/tiny_card_icon_1"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/tiny_card_icon1" />

        <ImageView
            android:id="@+id/transfer_text"
            android:layout_width="36dp"
            android:layout_height="11dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/transfer_text"
            android:src="@drawable/transfer"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tiny_card2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/tiny_card1"
        app:layout_constraintTop_toBottomOf="@+id/myViewPager">

        <ImageView
            android:id="@+id/tiny_card_icon_2"
            android:layout_width="13.6dp"
            android:layout_height="14.67dp"
            android:layout_marginStart="28.2dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/tiny_card_icon_2"
            android:src="@drawable/vector" />

        <ImageView
            android:id="@+id/mobile_text"
            android:layout_width="36dp"
            android:layout_height="11dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/transfer_text"
            android:src="@drawable/mobile"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tiny_card3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/tiny_card1"
        app:layout_constraintTop_toBottomOf="@+id/myViewPager">

        <ImageView
            android:id="@+id/house_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="25.24dp"
            android:layout_marginTop="18.96dp"
            android:contentDescription="@string/house_icon"
            app:srcCompat="@drawable/house_icon" />

        <ImageView
            android:id="@+id/house_icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="47dp"
            android:contentDescription="@string/house_icon_text"
            app:srcCompat="@drawable/utilities" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tiny_card4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="194dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/tiny_card1"
        app:layout_constraintTop_toBottomOf="@+id/myViewPager">

        <ImageView
            android:id="@+id/bar_code_icon"
            android:layout_width="23dp"
            android:layout_height="18dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24.5dp"
            android:contentDescription="@string/bar_code_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/bar2" />

        <ImageView
            android:id="@+id/bar_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/bar_code_text"
            app:srcCompat="@drawable/qr_code" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_card"
        android:layout_width="match_parent"
        android:layout_height="431dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiny_card1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/special_offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/special_offers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_layout"
        app:srcCompat="@drawable/special_offers" />

    <ImageView
        android:id="@+id/display_card_1"
        android:layout_width="155dp"
        android:layout_height="90dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/display_card"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/special_offers"
        app:srcCompat="@drawable/rectangle_27" />

    <ImageView
        android:id="@+id/cash_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/cash_loan"
        app:layout_constraintStart_toStartOf="@+id/display_card_1"
        app:layout_constraintTop_toTopOf="@+id/display_card_1"
        app:srcCompat="@drawable/cash_loan" />

    <ImageView
        android:id="@+id/dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="47dp"
        android:contentDescription="@string/dollar"
        app:layout_constraintStart_toStartOf="@+id/display_card_1"
        app:layout_constraintTop_toTopOf="@+id/display_card_1"
        app:srcCompat="@drawable/dollar_sign" />

    <ImageView
        android:id="@+id/sika_less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:contentDescription="@string/sika_less"
        app:layout_constraintStart_toEndOf="@+id/dollar"
        app:layout_constraintTop_toTopOf="@+id/dollar"
        app:srcCompat="@drawable/sika_less"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/dollar_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/dollar_frame"
        app:layout_constraintEnd_toEndOf="@+id/display_card_1"
        app:layout_constraintTop_toTopOf="@+id/display_card_1"
        app:srcCompat="@drawable/rectangle_28"
        tools:layout_editor_absoluteY="93dp" />

    <ImageView
        android:id="@+id/dollar_frame_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/dollar_frame_dollar"
        app:layout_constraintStart_toStartOf="@+id/dollar_frame"
        app:layout_constraintTop_toTopOf="@+id/dollar_frame"
        app:srcCompat="@drawable/dollar_sign" />

    <ImageView
        android:id="@+id/display_card_2"
        android:layout_width="155dp"
        android:layout_height="90dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/display_card"
        android:scaleType="center"
        app:layout_constraintStart_toEndOf="@+id/display_card_1"
        app:layout_constraintTop_toBottomOf="@+id/special_offers"
        app:srcCompat="@drawable/rectangle_27" />

    <ImageView
        android:id="@+id/credit_card_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/credit_card"
        app:layout_constraintStart_toStartOf="@+id/display_card_2"
        app:layout_constraintTop_toTopOf="@+id/display_card_2"
        app:srcCompat="@drawable/credit_card_text" />

    <ImageView
        android:id="@+id/dollar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="47dp"
        android:contentDescription="@string/dollar"
        app:layout_constraintStart_toStartOf="@+id/display_card_2"
        app:layout_constraintTop_toTopOf="@+id/display_card_2"
        app:srcCompat="@drawable/dollar_sign" />

    <ImageView
        android:id="@+id/sika_less2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:contentDescription="@string/sika_less"
        app:layout_constraintStart_toEndOf="@+id/dollar2"
        app:layout_constraintTop_toTopOf="@+id/dollar2"
        app:srcCompat="@drawable/sika_less"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/credit_card_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33.83dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/credit_card_frame"
        app:layout_constraintEnd_toEndOf="@+id/display_card_2"
        app:layout_constraintTop_toTopOf="@+id/display_card_2"
        app:srcCompat="@drawable/credit_card_1" />


    <ImageView
        android:id="@+id/partners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/partners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_card_1"
        app:srcCompat="@drawable/partners"
        tools:ignore="ImageContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/partners"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>